Removed 404 check, return record updated to return "open" and "code" instead of "tunnel_open"

--- a/tests/integration/targets/support_tunnel/tasks/main.yml
+++ b/tests/integration/targets/support_tunnel/tasks/main.yml
@@ -12,7 +12,8 @@
       register: support_tunnel
     - ansible.builtin.assert:
         that:
-          - support_tunnel.record.tunnel_open == false
+          - support_tunnel.record.open == false
+          - not support_tunnel.record.code
 
     - name: Open support tunnel
       scale_computing.hypercore.support_tunnel:
@@ -22,16 +23,20 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel is changed
-          - support_tunnel.record.tunnel_open == 4422
-          - support_tunnel.diff.before.tunnel_open == false
-          - support_tunnel.diff.after.tunnel_open == 4422
+          - support_tunnel.record.open == true
+          - support_tunnel.record.code == 4422
+          - support_tunnel.diff.before.open == false
+          - not support_tunnel.diff.before.code
+          - support_tunnel.diff.after.open == true
+          - support_tunnel.diff.after.code == 4422
     
     - name: Open support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
       register: support_tunnel
     - ansible.builtin.assert:
         that:
-          - support_tunnel.record.tunnel_open == 4422
+          - support_tunnel.record.open == true
+          - support_tunnel.record.code == 4422
     
     - name: Open support tunnel - idempotence
       scale_computing.hypercore.support_tunnel:
@@ -41,17 +46,21 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel is not changed
-          - support_tunnel.record.tunnel_open == 4422
-          - support_tunnel.diff.before.tunnel_open == 4422
-          - support_tunnel.diff.after.tunnel_open == 4422
+          - support_tunnel.record.open == true
+          - support_tunnel.record.code == 4422
+          - support_tunnel.diff.before.open == true
+          - support_tunnel.diff.before.code == 4422
+          - support_tunnel.diff.after.open == true
+          - support_tunnel.diff.after.code == 4422
     
     - name: Open support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
       register: support_tunnel
     - ansible.builtin.assert:
         that:
-          - support_tunnel.record.tunnel_open == 4422
-    
+          - support_tunnel.record.open == true
+          - support_tunnel.record.code == 4422
+
     - name: Close support tunnel
       scale_computing.hypercore.support_tunnel:
         state: absent
@@ -59,16 +68,20 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel is changed
-          - support_tunnel.record.tunnel_open == false
-          - support_tunnel.diff.before.tunnel_open == 4422
-          - support_tunnel.diff.after.tunnel_open == false
+          - support_tunnel.record.open == false
+          - not support_tunnel.record.code
+          - support_tunnel.diff.before.open == true
+          - support_tunnel.diff.before.code == 4422
+          - support_tunnel.diff.after.open == false
+          - not support_tunnel.diff.after.code
     
     - name: Close support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
       register: support_tunnel
     - ansible.builtin.assert:
         that:
-          - support_tunnel.record.tunnel_open == false
+          - support_tunnel.record.open == false
+          - not support_tunnel.record.code
 
     - name: Close support tunnel - idempotence
       scale_computing.hypercore.support_tunnel:
@@ -77,13 +90,17 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel is not changed
-          - support_tunnel.record.tunnel_open == false
-          - support_tunnel.diff.before.tunnel_open == false
-          - support_tunnel.diff.after.tunnel_open == false
+          - support_tunnel.record.open == false
+          - not support_tunnel.record.code
+          - support_tunnel.diff.before.open == false
+          - not support_tunnel.diff.before.code
+          - support_tunnel.diff.after.open == false
+          - not support_tunnel.diff.after.code
     
     - name: Close support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
       register: support_tunnel
     - ansible.builtin.assert:
         that:
-          - support_tunnel.record.tunnel_open == false
+          - support_tunnel.record.open == false
+          - not support_tunnel.record.code
