CI make support_tunnel code a var
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/support_tunnel/tasks/main.yml
+++ b/tests/integration/targets/support_tunnel/tasks/main.yml
@@ -4,6 +4,8 @@
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
+  vars:
+    code: "4422"
 
   block:
     - name: Cleanup
@@ -18,17 +20,17 @@
     - name: Open support tunnel
       scale_computing.hypercore.support_tunnel:
         state: present
-        code: 4422
+        code: "{{ code }}"
       register: support_tunnel
     - ansible.builtin.assert:
         that:
           - support_tunnel is changed
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == 4422
+          - support_tunnel.record.code == "{{ code }}"
           - support_tunnel.diff.before.open == false
           - not support_tunnel.diff.before.code
           - support_tunnel.diff.after.open == true
-          - support_tunnel.diff.after.code == 4422
+          - support_tunnel.diff.after.code == "{{ code }}"
     
     - name: Open support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
@@ -36,22 +38,22 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == 4422
+          - support_tunnel.record.code == "{{ code }}"
     
     - name: Open support tunnel - idempotence
       scale_computing.hypercore.support_tunnel:
         state: present
-        code: 4422
+        code: "{{ code }}"
       register: support_tunnel
     - ansible.builtin.assert:
         that:
           - support_tunnel is not changed
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == 4422
+          - support_tunnel.record.code == "{{ code }}"
           - support_tunnel.diff.before.open == true
-          - support_tunnel.diff.before.code == 4422
+          - support_tunnel.diff.before.code == "{{ code }}"
           - support_tunnel.diff.after.open == true
-          - support_tunnel.diff.after.code == 4422
+          - support_tunnel.diff.after.code == "{{ code }}"
     
     - name: Open support tunnel - check with info module
       scale_computing.hypercore.support_tunnel_info:
@@ -59,7 +61,7 @@
     - ansible.builtin.assert:
         that:
           - support_tunnel.record.open == true
-          - support_tunnel.record.code == 4422
+          - support_tunnel.record.code == "{{ code }}"
 
     - name: Close support tunnel
       scale_computing.hypercore.support_tunnel:
@@ -71,7 +73,7 @@
           - support_tunnel.record.open == false
           - not support_tunnel.record.code
           - support_tunnel.diff.before.open == true
-          - support_tunnel.diff.before.code == 4422
+          - support_tunnel.diff.before.code == "{{ code }}"
           - support_tunnel.diff.after.open == false
           - not support_tunnel.diff.after.code
     
