--- a/tests/integration/targets/smtp/tasks/main.yml
+++ b/tests/integration/targets/smtp/tasks/main.yml
@@ -27,12 +27,14 @@
         that:
           - result.changed == True
           - result.diff.before != result.diff.after
+          - result.record.keys() | sort == ['auth_password', 'auth_user', 'from_address', 'latest_task_tag', 'port', 'smtp_server', 'use_auth', 'use_ssl', 'uuid']
           - info.record.smtp_server == "smtp.office365.com"
           - info.record.port == 21
           - info.record.use_ssl == False
           - info.record.use_auth == False
           - info.record.auth_user == ""
           - info.record.from_address == ""
+          - result.record == info.record
 
     - name: Modify SMTP configs - NO AUTHENTICATION
       scale_computing.hypercore.smtp:
@@ -54,6 +56,7 @@
           - info.record.use_auth == False
           - info.record.auth_user == default_auth_user
           - info.record.from_address == "test@test.com"
+          - result.record == info.record
 
     - name: Repeat the previous task
       scale_computing.hypercore.smtp:
@@ -75,6 +78,7 @@
           - info.record.use_auth == False
           - info.record.auth_user == default_auth_user
           - info.record.from_address == "test@test.com"
+          - result.record == info.record
 
     - name: Modify SMTP configs - WITH AUTHENTICATION
       scale_computing.hypercore.smtp:
@@ -98,6 +102,7 @@
           - info.record.use_auth == True
           - info.record.auth_user == "test"
           - info.record.from_address == "test@test.com"
+          - result.record == info.record
 
     # -----------------------------------------------------------
 
@@ -112,4 +117,4 @@
           useAuth: False
           authUser: ""
           authPassword: ""
-          fromAddress: "PUB6@scalecomputing.com"
+          fromAddress: "PUB5@scalecomputing.com"
