--- a/tests/integration/targets/smtp/tasks/main.yml
+++ b/tests/integration/targets/smtp/tasks/main.yml
@@ -3,118 +3,8 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
-
-  vars:
-    default_uuid: ""
-    default_smtp_server: ""
-    default_port: 0
-    default_use_ssl: False
-    default_use_auth: False
-    default_auth_user: ""
-    default_from_address: ""
+    SC_TIMEOUT: "{{ sc_timeout }}"
 
   block:
-    # -----------------------------------------------------------
-
-    - name: Modify SMTP configs - REQUIRED ONLY
-      scale_computing.hypercore.smtp:
-        server: smtp.office365.com
-        port: 21
-      register: result
-    - scale_computing.hypercore.smtp_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-          - result.record.keys() | sort == ['auth_password', 'auth_user', 'from_address', 'latest_task_tag', 'port', 'smtp_server', 'use_auth', 'use_ssl', 'uuid']
-          - info.record.smtp_server == "smtp.office365.com"
-          - info.record.port == 21
-          - info.record.use_ssl == False
-          - info.record.use_auth == False
-          - info.record.auth_user == ""
-          - info.record.from_address == ""
-          - result.record == info.record
-
-    - name: Modify SMTP configs - NO AUTHENTICATION
-      scale_computing.hypercore.smtp:
-        server: smtp.office365.com
-        port: 26
-        use_ssl: False
-        use_auth: False
-        from_address: test@test.com
-      register: result
-    - scale_computing.hypercore.smtp_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-          - info.record.smtp_server == "smtp.office365.com"
-          - info.record.port == 26
-          - info.record.use_ssl == False
-          - info.record.use_auth == False
-          - info.record.auth_user == default_auth_user
-          - info.record.from_address == "test@test.com"
-          - result.record == info.record
-
-    - name: Repeat the previous task
-      scale_computing.hypercore.smtp:
-        server: smtp.office365.com
-        port: 26
-        use_ssl: False
-        use_auth: False
-        from_address: test@test.com
-      register: result
-    - scale_computing.hypercore.smtp_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-          - info.record.smtp_server == "smtp.office365.com"
-          - info.record.port == 26
-          - info.record.use_ssl == False
-          - info.record.use_auth == False
-          - info.record.auth_user == default_auth_user
-          - info.record.from_address == "test@test.com"
-          - result.record == info.record
-
-    - name: Modify SMTP configs - WITH AUTHENTICATION
-      scale_computing.hypercore.smtp:
-        server: smtp-relay.gmail.com
-        port: 25
-        use_ssl: False
-        use_auth: True
-        auth_user: test
-        auth_password: test123
-        from_address: test@test.com
-      register: result
-    - scale_computing.hypercore.smtp_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-          - info.record.smtp_server == "smtp-relay.gmail.com"
-          - info.record.port == 25
-          - info.record.use_ssl == False
-          - info.record.use_auth == True
-          - info.record.auth_user == "test"
-          - info.record.from_address == "test@test.com"
-          - result.record == info.record
-
-    # -----------------------------------------------------------
-
-    - name: Restore back to default
-      scale_computing.hypercore.api:
-        action: post
-        endpoint: /rest/v1/AlertSMTPConfig/smtpconfig_guid
-        data:
-          smtpServer: "smtp-relay.gmail.com"
-          port: 25
-          useSSL: False
-          useAuth: False
-          authUser: ""
-          authPassword: ""
-          fromAddress: "PUB5@scalecomputing.com"
+    - include_tasks: 01_smtp_info.yml
+    - include_tasks: 02_smtp.yml
