--- a/tests/integration/targets/email_alert/tasks/main.yml
+++ b/tests/integration/targets/email_alert/tasks/main.yml
@@ -5,34 +5,31 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   vars:
-#    starting_email_num: 0
-#    current_email_num: 0
     new_email : new@test.com
     create_email: test@test.com
 
   block:
-    # todo cleanup
-#    - name: Get default emails
-#      scale_computing.hypercore.api:
-#        endpoint: rest/v1/AlertEmailTarget
-#        action: get
-#      register: default_emails
-#    - ansible.builtin.set_fact:
-#        default_emails: default_emails
-#
-#    - name: Preapare for test - cleanup
-#      scale_computing.hypercore.api:
-#        endpoint: rest/v1/AlertEmailTarget
-#        action: post
-
-
-    - name: Get initial number of emails
+    - name: Get starting emails
       scale_computing.hypercore.email_alert_info:
       register: info
     - ansible.builtin.set_fact:
+        starting_emails: "{{ info.records }}"
+
+    - name: Preapare for test - cleanup (also test Remove with loop)
+      scale_computing.hypercore.email_alert:
+        email: "{{ item.email_address }}"
+        state: absent
+      loop: "{{ starting_emails }}"
+    - scale_computing.hypercore.email_alert_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
+          - info.records == []
+          - info.records|length == 0|int
+    - ansible.builtin.set_fact:
         starting_email_num: "{{ info.records|length }}"
-    - ansible.builtin.debug:
-        msg: "{{ starting_email_num }}"
+
+    # -----------------------------------------------------------
 
     - name: Create new Email Alert Recipient
       scale_computing.hypercore.email_alert:
@@ -50,6 +47,7 @@
           - result.records != []
           - result.records[0].keys() | sort == ['alert_tag_uuid', 'email_address', 'latest_task_tag', 'resend_delay', 'silent_period', 'uuid']
           - info.records|length == starting_email_num|int + 1|int
+          - info.records[0].email_address == "{{ create_email }}"
 
     - name: Create new Email Alert Recipient - idempotence
       scale_computing.hypercore.email_alert:
@@ -78,7 +76,6 @@
           - result.diff.before != result.diff.after
     - ansible.builtin.assert: &test1
         that:
-          - result.changed == True
           - result.records != []
           - result.records[0].keys() | sort == ['alert_tag_uuid', 'email_address', 'latest_task_tag', 'resend_delay', 'silent_period', 'uuid']
           - info.records|length == starting_email_num|int + 1|int
@@ -102,6 +99,7 @@
       scale_computing.hypercore.email_alert:
         email: "{{ new_email }}"
         email_new: "{{ new_email }}"
+        state: present
       register: result
     - scale_computing.hypercore.email_alert_info:
       register: info
@@ -123,11 +121,25 @@
       register: info
     - ansible.builtin.assert:
         that:
+          - result.changed == True
+          - result.diff.before != result.diff.after
+    - ansible.builtin.assert: &test2
+        that:
+          - info.records|length == starting_email_num|int
+          - result.records == []
+
+    - name: Remove previously created Email Alert Recipient - idempotence
+      scale_computing.hypercore.email_alert:
+        email: "{{ new_email }}"
+        state: absent
+      register: result
+    - scale_computing.hypercore.email_alert_info:
+      register: info
+    - ansible.builtin.assert:
+        that:
           - result.changed == False
           - result.diff.before == result.diff.after
-          - info.records|length == starting_email_num|int
-          - result.records != []
-          - result.records[0].keys() | sort == ['alert_tag_uuid', 'email_address', 'latest_task_tag', 'resend_delay', 'silent_period', 'uuid']
+    - ansible.builtin.assert: *test2
 
 # --------- Not yet implemented ---------
 #    - name: Send test email to an existing Email Alert Recipient
@@ -142,3 +154,11 @@
 #          - result.diff.before == result.diff.after
 #          - info.records|length == current_email_num
 #          - info.records[0].email_address == "new@test.com"
+
+    # -----------------------------------------------------------
+
+    - name: Restore back to default
+      scale_computing.hypercore.email_alert:
+        email: "{{ item.email_address }}"
+        state: present
+      loop: "{{ starting_emails }}"
