--- a/tests/integration/targets/email_alert/tasks/main.yml
+++ b/tests/integration/targets/email_alert/tasks/main.yml
@@ -5,7 +5,7 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   vars:
-    new_email : new@test.com
+    new_email: new@test.com
     create_email: test@test.com
 
   block:
@@ -45,7 +45,9 @@
     - ansible.builtin.assert: &test0
         that:
           - result.records != []
-          - result.records[0].keys() | sort == ['alert_tag_uuid', 'email_address', 'latest_task_tag', 'resend_delay', 'silent_period', 'uuid']
+          - result.records[0].keys() | sort ==
+            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
+            'resend_delay', 'silent_period', 'uuid']
           - info.records|length == starting_email_num|int + 1|int
           - info.records[0].email_address == "{{ create_email }}"
 
@@ -77,7 +79,9 @@
     - ansible.builtin.assert: &test1
         that:
           - result.records != []
-          - result.records[0].keys() | sort == ['alert_tag_uuid', 'email_address', 'latest_task_tag', 'resend_delay', 'silent_period', 'uuid']
+          - result.records[0].keys() | sort ==
+            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
+            'resend_delay', 'silent_period', 'uuid']
           - info.records|length == starting_email_num|int + 1|int
 
     - name: Modify existing Email Alert Recipient - idempotence
@@ -109,7 +113,9 @@
           - result.diff.before == result.diff.after
           - info.records|length == starting_email_num|int + 1|int
           - result.records != []
-          - result.records[0].keys() | sort == ['alert_tag_uuid', 'email_address', 'latest_task_tag', 'resend_delay', 'silent_period', 'uuid']
+          - result.records[0].keys() | sort ==
+            ['alert_tag_uuid', 'email_address', 'latest_task_tag',
+            'resend_delay', 'silent_period', 'uuid']
 
 
     - name: Remove previously created Email Alert Recipient
@@ -141,7 +147,7 @@
           - result.diff.before == result.diff.after
     - ansible.builtin.assert: *test2
 
-# --------- Not yet implemented ---------
+    # --------- Not yet implemented ---------
 #    - name: Send test email to an existing Email Alert Recipient
 #      scale_computing.hypercore.email_alert:
 #        email: new@test.com
