--- a/tests/integration/targets/smtp/tasks/01_smtp_info.yml
+++ b/tests/integration/targets/smtp/tasks/01_smtp_info.yml
@@ -1,17 +1,32 @@
 ---
-- name: Get expected configs
-  scale_computing.hypercore.api:
-    action: get
-    endpoint: /rest/v1/AlertSMTPConfig/smtpconfig_guid
-  register: smtp_config
-- ansible.builtin.set_fact:
-    actual_smtp_server: "{{ smtp_config.record.0.smtpServer }}"
-    actual_port: "{{ smtp_config.record.0.port }}"
-    actual_use_ssl: "{{ smtp_config.record.0.useSSL }}"
-    actual_use_auth: "{{ smtp_config.record.0.useAuth }}"
-    actual_auth_user: "{{ smtp_config.record.0.authUser }}"
-    actual_from_address: "{{ smtp_config.record.0.fromAddress }}"
-    actual_uuid: "{{ smtp_config.record.0.uuid }}"
+# -------------------------------------------------------------------
+# case 1 - config is missing
+- name: Remove all SMTP config
+  include_tasks: helper_api_smtp_delete_all.yml
+
+- name: Retrieve info about SMTP Config - config is missing
+  scale_computing.hypercore.smtp_info:
+  register: result
+- ansible.builtin.debug:
+    msg: "{{ result.record }}"
+- ansible.builtin.assert:
+    that:
+      - result.changed == False
+      - result.record == {}
+
+# -------------------------------------------------------------------
+# case 2 - we have a valid config, no authentication
+- name: Create one AlertSMTPConfig object
+  include_tasks: helper_api_smtp_create_one.yml
+  vars:
+    smtp_config:
+      host: mail.example.com
+      port: 25
+      use_ssl: False
+      use_auth: False
+      auth_user: ""
+      auth_password: ""
+      from_address: "ci-test@example.com"
 
 - name: Retrieve info about SMTP Config
   scale_computing.hypercore.smtp_info:
@@ -20,14 +35,14 @@
     msg: "{{ result.record }}"
 - ansible.builtin.assert:
     that:
-      - result.record != {}
+      - result.changed == False
       - result.record.keys() | sort == ['auth_password', 'auth_user', 'from_address', 'latest_task_tag', 'port', 'smtp_server', 'use_auth', 'use_ssl', 'uuid']
-      - result.record.uuid == actual_uuid
-      - result.record.smtp_server == actual_smtp_server
-      - "{{ result.record.port | int }} == {{ actual_port | int }}"
-      - result.record.use_ssl == actual_use_ssl
-      - result.record.use_auth == actual_use_auth
-      - result.record.auth_user == actual_auth_user
+      - result.record.uuid == "smtpconfig_guid"
+      - result.record.smtp_server == "mail.example.com"
+      - result.record.port == 25
+      - result.record.use_ssl == False
+      - result.record.use_auth == False
+      - result.record.auth_user == ""
       - result.record.auth_password == ""  # API does not return password
-      - result.record.from_address == actual_from_address
+      - result.record.from_address == "ci-test@example.com"
       - result.record.latest_task_tag
