--- a/tests/integration/integration_config.yml.template
+++ b/tests/integration/integration_config.yml.template
@@ -13,3 +13,33 @@ smb_password: <example mypassword>
 sc_replication_dest_host: <your_host, example https://10.0.0.4>
 sc_replication_dest_username: <your_user4>
 sc_replication_dest_password: <your_password4>
+
+# sc_config is specific for each test cluster
+# The values should be set after tests, to ensure cluster is left in functional state.
+sc_config:
+  <sc_host>:
+    support_tunnel:
+      open: true
+      code: "4422"
+    time_server:
+      source: pool.ntp.org
+    time_zone:
+      zone: US/Eastern
+    dns_config:
+      dns_servers:
+        - 1.1.1.1
+        - 1.0.0.1
+      search_domains: ""
+    registration:
+      company_name: Scale Computing
+      contact: <firstname secondname>
+      email: someone@scalecomputing.com
+      phone: "123 456 7890"
+    smtp:
+      host: smtp-relay.gmail.com
+      port: 25
+      use_ssl: false
+      from_address: PUBx@scalecomputing.com
+      use_auth: false
+      auth_user: ""
+      auth_password: ""
