--- a/tests/integration/targets/smtp/tasks/02_smtp.yml
+++ b/tests/integration/targets/smtp/tasks/02_smtp.yml
@@ -4,6 +4,7 @@
 - name: Remove all SMTP config
   include_tasks: helper_api_smtp_delete_all.yml
 - name: Create one AlertSMTPConfig object
+  when: not test_on_emtpy_cluster
   include_tasks: helper_api_smtp_create_one.yml
   vars:
     smtp_config:
@@ -16,6 +17,10 @@
       from_address: "ci-test@example.com"
 
 # -----------------------------------------------------------
+- name: Remove all SMTP config
+  include_tasks: helper_api_smtp_delete_all.yml
+  when: test_on_emtpy_cluster
+
 - name: Modify SMTP configs - REQUIRED ONLY
   scale_computing.hypercore.smtp:
     server: smtp.office365.com
@@ -60,11 +65,16 @@
       - info.record.auth_user == ""
       - info.record.auth_password == ""
       # BUG, from_address should not be reset
+      # TODO expected value depends on test_on_emtpy_cluster flag.
       # - info.record.from_address == "ci-test@example.com"
       - result.record == info.record
 
 
 # -----------------------------------------------------------
+- name: Remove all SMTP config
+  include_tasks: helper_api_smtp_delete_all.yml
+  when: test_on_emtpy_cluster
+
 - name: Modify SMTP configs - NO AUTHENTICATION
   scale_computing.hypercore.smtp:
     server: smtp.office365.com
@@ -112,6 +122,10 @@
       - result.record == info.record
 
 # -----------------------------------------------------------
+- name: Remove all SMTP config
+  include_tasks: helper_api_smtp_delete_all.yml
+  when: test_on_emtpy_cluster
+
 - name: Modify SMTP configs - WITH AUTHENTICATION
   scale_computing.hypercore.smtp:
     server: smtp-relay.gmail.com
