--- a/tests/integration/targets/smtp/tasks/02_smtp.yml
+++ b/tests/integration/targets/smtp/tasks/02_smtp.yml
@@ -17,6 +17,11 @@
       from_address: "ci-test@example.com"
 
 # -----------------------------------------------------------
+# expected_from_address depends on test_on_emtpy_cluster value
+- name: Set expected_from_address
+  set_fact:
+    expected_from_address: "{{ test_on_emtpy_cluster | ternary('', 'ci-test@example.com') }}"
+
 - name: Remove all SMTP config
   include_tasks: helper_api_smtp_delete_all.yml
   when: test_on_emtpy_cluster
@@ -43,7 +48,7 @@
       - info.record.auth_password == ""
       # BUG, from_address should not be reset
       # Ignore for today.
-      - info.record.from_address == "ci-test@example.com"
+      - info.record.from_address == expected_from_address
       - result.record == info.record
 
 - name: Modify SMTP configs - REQUIRED ONLY - idempotence
@@ -64,7 +69,7 @@
       - info.record.use_auth == False
       - info.record.auth_user == ""
       - info.record.auth_password == ""
-      - info.record.from_address == "ci-test@example.com"
+      - info.record.from_address == expected_from_address
       - result.record == info.record
 
 
