--- a/tests/integration/targets/smtp/tasks/02_smtp.yml
+++ b/tests/integration/targets/smtp/tasks/02_smtp.yml
@@ -181,3 +181,27 @@
       - info.record.auth_password == ""
       - info.record.from_address == "test@test.com"
       - result.record == info.record
+
+# Omitted parameters should be unmodified.
+- name: Modify SMTP configs - WITH AUTHENTICATION - partial update
+  scale_computing.hypercore.smtp:
+    server: smtp-relay.gmail.com
+    port: 26
+  register: result
+- scale_computing.hypercore.smtp_info:
+  register: info
+- ansible.builtin.assert:
+    that:
+      # is not idempotent, but before == after
+      - result.changed == True
+      # Complication "before == after" fails too
+      # latest_task_tag has different sessionID, modifiedTime etc.
+      # - result.diff.before == result.diff.after
+      - info.record.smtp_server == "smtp-relay.gmail.com"
+      - info.record.port == 26
+      - info.record.use_ssl == False
+      - info.record.use_auth == True
+      - info.record.auth_user == "test"
+      - info.record.auth_password == ""
+      - info.record.from_address == "test@test.com"
+      - result.record == info.record
