Fix example must be playbook, not just taskfile
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/email_alert_info.yml
+++ b/examples/email_alert_info.yml
@@ -1,6 +1,12 @@
 ---
-- name: List all Email alert recipients
-  scale_computing.hypercore.email_alert_info:
-  register: info
-- ansible.builtin.debug:
-    msg: "{{ info }}"
+- name: Example email_alert_info module
+  hosts: localhost
+  connection: local
+  gather_facts: false
+
+  tasks:
+    - name: List all Email alert recipients
+      scale_computing.hypercore.email_alert_info:
+      register: info
+    - ansible.builtin.debug:
+        msg: "{{ info }}"
