--- a/examples/email_alert.yml
+++ b/examples/email_alert.yml
@@ -1,22 +1,27 @@
 ---
-# --------------- Module email_alert
-- name: Create Email alert recipient
-  scale_computing.hypercore.email_alert:
-    email: example@example.com
-    state: present # absent, test --> create, delete, test
+- name: Example email_alert module
+  hosts: localhost
+  connection: local
+  gather_facts: false
 
-- name: Send a test email
-  scale_computing.hypercore.email_alert:
-    email: example@example.com
-    state: test
+  tasks:
+    - name: Create Email alert recipient
+      scale_computing.hypercore.email_alert:
+        email: example@example.com
+        state: present # absent, test --> create, delete, test
 
-- name: Modify previously created Email alert recipient
-  scale_computing.hypercore.email_alert:
-    email: example@example.com
-    email_new: new@example.com
-    state: present
+    - name: Send a test email
+      scale_computing.hypercore.email_alert:
+        email: example@example.com
+        state: test
 
-- name: Remove Email alert recipient
-  scale_computing.hypercore.email_alert:
-    email: new@example.com
-    state: absent
+    - name: Modify previously created Email alert recipient
+      scale_computing.hypercore.email_alert:
+        email: example@example.com
+        email_new: new@example.com
+        state: present
+
+    - name: Remove Email alert recipient
+      scale_computing.hypercore.email_alert:
+        email: new@example.com
+        state: absent
