Reset DNS configuration after tests
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/dns_config/tasks/main.yml
+++ b/tests/integration/targets/dns_config/tasks/main.yml
@@ -8,3 +8,7 @@
   block:
     - include_tasks: 01_dns_config_info.yml
     - include_tasks: 02_dns_config.yml
+  always:
+    - include_tasks: helper_api_dns_reset.yml
+      vars:
+        dns_config: "{{ sc_config[sc_host].dns_config }}"
